Prevent mobile menu from causing scrollbars

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -47,6 +47,8 @@ body > header {
 	margin: 0.5rem;
 	aspect-ratio: 1;
 	position: relative;
+	// Prevent right-shifted menu from causing scrollbars
+	overflow-x: hidden;
 
 	// Checkbox hack: Make the actual checkbox invisible, and style the label to take up
 	// all the space.
